Edited multiple pages

--- a/Organic Food Free HTML5 Template/site/index-1.html
+++ b/Organic Food Free HTML5 Template/site/index-1.html
@@ -52,8 +52,8 @@
      <nav  class="" >
       <ul class="sf-menu">
          <li><a href="index.html">About</a></li>
-         <li class="current"><a href="index-1.html">Superfoods</a></li>
-         <li><a href="index-2.html">Blog</a></li>
+         <li class="current"><a href="index-1.html">Superfood</a></li>
+         <li><a href="index-2.html">News</a></li>
          <li><a href="index-3.html">Recipes</a></li>
          <li><a href="index-4.html">Contacts</a></li>
        </ul>
