--- a/Organic Food Free HTML5 Template/site/index-3.html
+++ b/Organic Food Free HTML5 Template/site/index-3.html
@@ -44,8 +44,8 @@
      <nav  class="" >
       <ul class="sf-menu">
          <li><a href="index.html">About</a></li>
-         <li><a href="index-1.html">Superfoods</a></li>
-         <li><a href="index-2.html">Blog</a></li>
+         <li><a href="index-1.html">Superfood</a></li>
+         <li><a href="index-2.html">News</a></li>
          <li class="current"><a href="index-3.html">Recipes</a></li>
          <li><a href="index-4.html">Contacts</a></li>
        </ul>
@@ -67,7 +67,7 @@
     </div>
     <div class="grid_7">
       <div class="rec"><img src="images/page4_img1.jpg" alt="" class="img_inner fleft "><div class="extra_wrapper">
-          <h4 class="head2"><a href="#">Fermus at manon nunoli </a></h4>Lorem ipsum dolor sit aconsectetur adipiscing elit. In mollis erat mat. neque facilisis, sit amet ultricies erat rutrum. Cras facilisis, nulla vel viverra auctor, leo ame magna sodales felis, quis malesuada nibh odio ut velit. Proin pharetra luctus dia a scelerisque eros. 
+          <h4 class="head2"><a href="#">Tumeric Antioxidant Smoothie </a></h4>Turmeric is a rhizomatous herbaceous perennial plant of the ginger family. The average person may best recognize turmeric as a spice commonly used in Indian cuisine. The active compound curcumin is known to have a wide range of medicinal benefits including anti-inflammatory, antioxidant, antitumour, antibacterial, and antiviral activities. 
           <br>
           <a href="#" class="link1">Learn More</a>
        </div></div>
