--- a/Organic Food Free HTML5 Template/site/index.html
+++ b/Organic Food Free HTML5 Template/site/index.html
@@ -82,8 +82,8 @@ height: 'auto',
      <nav  class="" >
       <ul class="sf-menu">
          <li class="current"><a href="index.html">About</a></li>
-         <li><a href="index-1.html">Products</a></li>
-         <li><a href="index-2.html">Blog</a></li>
+         <li><a href="index-1.html">Superfood</a></li>
+         <li><a href="index-2.html">News</a></li>
          <li><a href="index-3.html">Recipes</a></li>
          <li><a href="index-4.html">Contacts</a></li>
        </ul>
@@ -124,23 +124,23 @@ height: 'auto',
           </ul>
         
           <nav>
-            <a href="#">fruits</a>
-            <a href="#">vegetables</a>
-            <a href="#">meat</a>
-            <a href="#">dairy</a>
+            <a href="#">Fruits</a>
+            <a href="#">Vegetables</a>
+            <a href="#">Leafy Greens</a>
+            <a href="#">Other</a>
           </nav>
         </div>
     </div>
     <div class="clear"></div>
     <div class="grid_8">
-      <h3>Welcome to Organic Company</h3>
-      <img src="images/page1_img1.jpg" alt="" class="img_inner fleft">
+      <h3>Welcome to Neptune's Garden</h3>
+      <img src="images/Neptune's Garden.png" alt="" class="img_inner fleft">
       <div class="extra_wrapper">
-		<p>Want to learn more about this freebie designed by TemplateMonster.com? Follow the <a href="http://blog.templatemonster.com/free-website-templates/">link</a></p>
-        <p><a href="http://www.templatemonster.com/category/agriculture-website-templates/" rel="nofollow">Find more themes of this kind at the category of premium Agriculture Website Templates.</a></p>
+		<p>With the lack of transparency and nutritional value within our current food systems, an equally questionable medical system, and an almost nonexistent focus on mindfulness, living a healthy lifestyle today is challenging.</p>
+        <p>Borrowing ideas from all across the globe, from cultures past and present, it is apparent that the solutions to living a healthy and happy lifestyle remain simple.</p>
+        <p>Neptune’s Garden offers to educate visitors with organic, holistic, and often tasty remedies for healing and overall well-being. </p>
       </div>
       <div class="clear"></div>
-      Aliquam nibh ante, egestas id dictum a, commodo luctus libero. Praesent faucibus malesuada faucibus. Donecyl laoreet metus id laoreet malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetu orci sed nulla facilisis consequat. Curabitur vel lorem sit amet nulla ullamcorper fermentum. 
       <div class="grid_4 alpha">
         <div class="banner maxheight">
           <h3><a href="#">100% Eco &amp; <br> Organic</a></h3>
@@ -158,7 +158,7 @@ height: 'auto',
       </div>
       <div class="grid_4 omega">
         <div class="banner b1 maxheight">
-          <h3><a href="#">Control of <br> the Quality </a></h3>
+          <h3><a href="#">Healing for Body & Soul </a></h3>
         </div>
         <h3>What We Offer</h3>
         <p>Retrolom ipsum dolor sit met, consectetur ipiscing elit. In mollis erat mattis neque facilisis, sit amet ultriciesert erat rutrum. Bras facilisis, nulla vel viverra aucto ame magna sodales felis, quis  nibh odio. </p>
