--- a/Organic Food Free HTML5 Template/site/index-4.html
+++ b/Organic Food Free HTML5 Template/site/index-4.html
@@ -68,7 +68,7 @@
       <h3>Contact Info</h3>
             <div class="map">
             <figure class="img_inner fleft">
-                          <iframe src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Brooklyn,+New+York,+NY,+United+States&amp;aq=0&amp;sll=37.0625,-95.677068&amp;sspn=61.282355,146.513672&amp;ie=UTF8&amp;hq=&amp;hnear=Brooklyn,+Kings,+New+York&amp;ll=40.649974,-73.950005&amp;spn=0.01628,0.025663&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe>
+                          <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d6251.428021213215!2d-78.86815639999999!3d38.4249736!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1418178247217" width="600" height="450" frameborder="0" style="border:0"></iframe>
                </figure>
                <p>All premium <span class="col1"><a href="http://www.templatemonster.com/category.php" rel="nofollow">website templates</a></span> from our collection go with support services. We do not provide any personal support for freebies. </p>
                <p>If you need someone to help you customize or polish the chosen free theme, ask guys from <span class="col1"><a href="http://templatetuning.com" rel="dofollow">Template Tuning</a></span> to do it for you. Keep in mind this will be a paid service.</p>
