--- a/Organic Food Free HTML5 Template/site/index.html
+++ b/Organic Food Free HTML5 Template/site/index.html
@@ -76,7 +76,7 @@ height: 'auto',
  <header> 
   <div class="container_12">
    <div class="grid_12"> 
-    <h1><a href="index.html"><img src="images/logo.png" alt="Boo House"></a> </h1>
+    <h1><a href="index.html"><img src="images/my_logo.png" alt="Boo House"></a> </h1>
     <div class="menu_block">
 
      <nav  class="" >
@@ -126,19 +126,19 @@ height: 'auto',
           <nav>
             <a href="#">Fruits</a>
             <a href="#">Vegetables</a>
-            <a href="#">Leafy Greens</a>
-            <a href="#">Other</a>
+            <a href="#">Shell Fish</a>
+            <a href="#">Fish</a>
           </nav>
         </div>
     </div>
     <div class="clear"></div>
     <div class="grid_8">
       <h3>Welcome to Neptune's Garden</h3>
-      <img src="images/Neptune's Garden.png" alt="" class="img_inner fleft">
+      <img src="images/neptunes_garden.png" alt="" class="img_inner fleft">
       <div class="extra_wrapper">
 		<p>With the lack of transparency and nutritional value within our current food systems, an equally questionable medical system, and an almost nonexistent focus on mindfulness, living a healthy lifestyle today is challenging.</p>
         <p>Borrowing ideas from all across the globe, from cultures past and present, it is apparent that the solutions to living a healthy and happy lifestyle remain simple.</p>
-        <p>Neptune’s Garden offers to educate visitors with organic, holistic, and often tasty remedies for healing and overall well-being. </p>
+        <p>Neptune’s Garden produces wholesome and organic food that are perfect ingredients for organic, holistic, and tasty remedies for healing and overall well-being. </p>
       </div>
       <div class="clear"></div>
       <div class="grid_4 alpha">
@@ -146,29 +146,29 @@ height: 'auto',
           <h3><a href="#">100% Eco &amp; <br> Organic</a></h3>
         </div>
         <h3>Our Mission</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mollis erat mattis neque facilisis, sit amet ultriciesyt erat rutrum. Cras facilisis, nulla vel viverra auctor, leo ame magna sodales felis, quis malesuada.</p>
+        <p>Neptune's Garden is founded on the belief of providing the local community with fresh and healthy fish, shellfish, and an abundance of diverse organic crops, perfect for wholesome organic remedies. </p>
         <ul class="list">
-          <li><a href="#">Duis massa elit, auctor non pellentesque vel.</a></li>
-          <li><a href="#">Nullam eget dignissim nisi, aliquam feugiat nibh. </a></li>
-          <li><a href="#">Ut nisi nibh, sagittis ut semper elementum.</a></li>
-          <li><a href="#">Pellentesque a odiohasellus vitae libero vel.</a></li>
-          <li><a href="#">Justo pretium dignissimteger semper in estgue.</a></li>
-          <li><a href="#"> In laoreet lacus eros, vel pulvinar urna ultut.</a></li>
+          <li><a href="#">Production of 100% organic and healthy foods.</a></li>
+          <li><a href="#">We strive to achieve a 100% self-sufficient system. </a></li>
+          <li><a href="#">100% transparency of food production.</a></li>
+          <li><a href="#">We go above-and-beyond to negate our environmental footprint.</a></li>
+          <li><a href="#">Educate visitors to a healthy and sustainable lifestyle.</a></li>
+          <li><a href="#">Sustainability is priority at Neptune's Garden.</a></li>
         </ul>
       </div>
       <div class="grid_4 omega">
         <div class="banner b1 maxheight">
-          <h3><a href="#">Healing for Body & Soul </a></h3>
+          <h3><a href="#">Nourishing Body & Soul </a></h3>
         </div>
         <h3>What We Offer</h3>
-        <p>Retrolom ipsum dolor sit met, consectetur ipiscing elit. In mollis erat mattis neque facilisis, sit amet ultriciesert erat rutrum. Bras facilisis, nulla vel viverra aucto ame magna sodales felis, quis  nibh odio. </p>
+        <p>Here at Neptune's Garden we are committed to providing healthy, organic, and delicious food that nourishes the body and soul. With a diverse range of foods, Neptune's Garden strives to bring you a selection of the finest food!</p>
         <ul class="list">
-          <li><a href="#">Setrolis assa elit, auctor non  reto lo. </a></li>
-          <li><a href="#">Master lam eget dignissim nliam feugiat nibherty. </a></li>
-          <li><a href="#">Do nisi nibh  ut semper ntumertolillente derto.</a></li>
-          <li><a href="#">Sertloque a odiohasellus vitae libero velertlo fer.</a></li>
-          <li><a href="#">Monrilo sto pretium dignissimerwtoli moloer. </a></li>
-          <li><a href="#">Ontnteger semper in estgue destro.</a></li>
+          <li><a href="#">Perfectly sweet and juicy fruit and berries. </a></li>
+          <li><a href="#">Delicious and nourishing root vegetables. </a></li>
+          <li><a href="#">Leafy greens that have the perfect crunch.</a></li>
+          <li><a href="#">Legumes that make for a perfect soup.</a></li>
+          <li><a href="#">Large, healthy, and meaty shellfish.</a></li>
+          <li><a href="#">100% healthy and deliciously flakey fish.</a></li>
         </ul>
       </div>
       <div class="clear"></div>
