--- a/Neptune's Garden/site/News.html
+++ b/Neptune's Garden/site/News.html
@@ -38,16 +38,16 @@
  <header> 
   <div class="container_12">
    <div class="grid_12"> 
-    <h1><a href="index.html"><img src="images/logo.png" alt="Boo House"></a> </h1>
+    <h1><a href="About.html"><img src="images/logo.png" alt="Boo House"></a> </h1>
     <div class="menu_block">
 
      <nav  class="" >
       <ul class="sf-menu">
-         <li><a href="index.html">About</a></li>
-         <li><a href="index-1.html">The Garden</a></li>
-         <li class="current"><a href="index-2.html">News</a></li>
-         <li><a href="index-3.html">Recipes</a></li>
-         <li><a href="index-4.html">Contacts</a></li>
+         <li><a href="About.html">About</a></li>
+         <li><a href="The_Garden.html">The Garden</a></li>
+         <li class="current"><a href="News.html">News</a></li>
+         <li><a href="Recipes.html">Recipes</a></li>
+         <li><a href="Contacts.html">Contacts</a></li>
        </ul>
     </nav>
     
