--- a/Neptune's Garden/site/Contacts.html
+++ b/Neptune's Garden/site/Contacts.html
@@ -62,7 +62,7 @@
 
 <!--==============================Content=================================-->
 
-<div class="content"><div class="ic">More Website Templates @ TemplateMonster.com - September 21, 2013!</div>
+<div class="content">
   <div class="container_12">
     <div class="grid_5">
       <h3>Contact Info</h3>
@@ -72,7 +72,7 @@
                </figure>
                <p>All premium <span class="col1"><a href="http://www.templatemonster.com/category.php" rel="nofollow">website templates</a></span> from our collection go with support services. We do not provide any personal support for freebies. </p>
                <p>If you need someone to help you customize or polish the chosen free theme, ask guys from <span class="col1"><a href="http://templatetuning.com" rel="dofollow">Template Tuning</a></span> to do it for you. Keep in mind this will be a paid service.</p>
-               Any ideas about freebies you want to see at our blog? Leave your messages here and tell us about the topics or theme categories you want us to design and develop. 
+               Any ideas about recipes or news articles you want to see at our blog? Leave your messages here and tell us about the topics or categories that the information falls under. 
               
           </div>
     </div>
