--- a/Neptune's Garden/site/About.html
+++ b/Neptune's Garden/site/About.html
@@ -76,7 +76,7 @@ height: 'auto',
  <header> 
   <div class="container_12">
    <div class="grid_12"> 
-    <h1><a href="About.html"><img src="images/my_logo.png" alt="Boo House"></a> </h1>
+    <h1><a href="About.html"><img src="images/my_logo%20(1).png" alt="Boo House"></a> </h1>
     <div class="menu_block">
 
      <nav  class="" >
@@ -104,7 +104,7 @@ height: 'auto',
       <div id="mi-slider" class="mi-slider">
           <ul>
             <li class=""><a href="#"><img src="images/fruit1.jpg" alt=""></a></li>
-            <li><a href="#"><img src="images/fruit2.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/fruit1.jpg" alt=""></a></li>
             <li><a href="#"><img src="images/fruit3.jpg" alt=""></a></li>
           </ul>
           <ul>
