--- a/Neptune's Garden/site/Recipes.html
+++ b/Neptune's Garden/site/Recipes.html
@@ -60,7 +60,7 @@
 
 <!--==============================Content=================================-->
 
-<div class="content"><div class="ic">More Website Templates @ TemplateMonster.com - September 21, 2013!</div>
+<div class="content">
   <div class="container_12">
     <div class="grid_12">
       <h3>Best Recipes</h3>
@@ -72,29 +72,29 @@
           <a href="#" class="link1">Learn More</a>
        </div></div>
       <div class="rec"><img src="images/page4_img2.jpg" alt="" class="img_inner fleft "><div class="extra_wrapper">
-          <h4 class="head2"><a href="#">Gertyue deverra newloki</a></h4>Cobeem ipsum dolor sit aconsectetur adipiscing elit. In mollis erat mat. neque facilisis, sit amet ultricies erat rutrum. Cras facilisis, nulla vel viverra auctor, leo ame magna sodales felis, quis malesuada nibh odio ut velit. Proin pharetra luctus dia.
+          <h4 class="head2"><a href="#">Antioxidant Acai Cacao Smoothie</a></h4>Acai berries have more antioxidants than nearly all other foods with high levels of these helpful compounds, including red wine, blueberries, blackberries, and raspberries. The antioxidants found in acai fruits are called anthocyanins and flavonoids. Most of the other ingredients in this recipe are also high in antioxidants, in particular goji berries and bee pollen.
           <br>
           <a href="#" class="link1">Learn More</a>
         </div></div>
       <div class="rec"><img src="images/page4_img3.jpg" alt="" class="img_inner fleft "><div class="extra_wrapper">
-          <h4 class="head2"><a href="#">Nolinteger nvallis arcim velter </a></h4>Lorem ipsum dolor sit aconsectetur adipiscing elit. In mollis erat mat. neque facilisis, sit amet ultricies erat rutrum. Cras facilisis, nulla vel viverra auctor, leo ame magna sodales felis, quis malesuada nibh odio ut velit. Proin pharetra luctus dia a scelerisque eros. 
+          <h4 class="head2"><a href="#">Schizandra Berry Superfood Smoothie</a></h4>This flavorful and exceptionally nutritious smoothie featuring the five-flavor superfood, schizandra berry. Schizandra berry is one of my new favorite superfoods. I dabbled with the berries in the past, using them to make tea, but it wasn’t until this new extract powder recently hit the market that it became a regular in my rotation. 
           <br>
           <a href="#" class="link1">Learn More</a>
         </div></div>
     </div>
     <div class="grid_4 prefix_1">
-      <h4>Gourmet Ideas</h4>
+      <h4>Staff Picks</h4>
       <ul class="list">
-        <li><a href="#">Duis massa elit, auctor non pellentesque vel.</a></li>
-        <li><a href="#">Nullam eget dignissim nisi, aliquam feugiat nibh. </a></li>
-        <li><a href="#">Ut nisi nibh, sagittis ut semper elementum.</a></li>
-        <li><a href="#">Pellentesque a odiohasellus vitae libero vel.</a></li>
-        <li><a href="#">Justo pretium dignissimnteger semper in estgue.</a></li>
-        <li><a href="#"> In laoreet lacus eros, vel pulvinar urna ultut.</a></li>
-        <li><a href="#">Monrelo a odiohasellus vitae libero vellloti.</a></li>
-        <li><a href="#">Berusto pretium dignissimer. </a></li>
-        <li><a href="#">Nernteger semper in estguem.</a></li>
-        <li><a href="#">Kollaoreet lacus eros, vel pulvinar urnat.</a></li>
+        <li><a href="#">Chocolate Blueberry Spirulina Smoothie</a></li>
+        <li><a href="#">Chocolate Almond Berry Butter Smoothie</a></li>
+        <li><a href="#">Pineapple Chlorella Smoothie</a></li>
+        <li><a href="#">Blueberry Chocolate Dream Smoothie</a></li>
+        <li><a href="#">Aloe Vera Lemonade Smoothie</a></li>
+        <li><a href="#">Bananarama Superfood Smoothie</a></li>
+        <li><a href="#">The T-Mac Smoothie</a></li>
+        <li><a href="#">Superfood Energizer Smoothie</a></li>
+        <li><a href="#">Blissful Bee Pollen Smoothie</a></li>
+        <li><a href="#">Acai Antioxidant Smoothie</a></li>
       </ul>
     </div>
   </div>
