--- a/Neptune's Garden/site/The_Garden.html
+++ b/Neptune's Garden/site/The_Garden.html
@@ -68,7 +68,7 @@
 
 <!--==============================Content=================================-->
 
-<div class="content"><div class="ic">More Website Templates @ TemplateMonster.com - September 21, 2013!</div>
+<div class="content">
   <div class="container_12">
     <div class="grid_12">
       <h3 class="mb0">Featured Superfoods</h3>
