--- a/Neptune's Garden/site/About.html
+++ b/Neptune's Garden/site/About.html
@@ -76,7 +76,7 @@ height: 'auto',
  <header> 
   <div class="container_12">
    <div class="grid_12"> 
-    <h1><a href="About.html"><img src="images/my_logo%20(1).png" alt="Boo House"></a> </h1>
+    <h1><a href="About.html"><img src="images/logo.png" alt="Boo House"></a> </h1>
     <div class="menu_block">
 
      <nav  class="" >
@@ -103,31 +103,31 @@ height: 'auto',
     <div class="grid_8 prefix_2">
       <div id="mi-slider" class="mi-slider">
           <ul>
-            <li class=""><a href="#"><img src="images/fruit1.jpg" alt=""></a></li>
-            <li><a href="#"><img src="images/fruit1.jpg" alt=""></a></li>
-            <li><a href="#"><img src="images/fruit3.jpg" alt=""></a></li>
+            <li class=""><a href="#"><img src="images/cherries.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/Coconut.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/Banana.jpg" alt=""></a></li>
           </ul>
           <ul>
-            <li class=""><a href="#"><img src="images/veg1.jpg" alt=""></a></li>
-            <li><a href="#"><img src="images/veg2.jpg" alt=""></a></li>
-            <li><a href="#"><img src="images/veg3.jpg" alt=""></a></li>
+            <li class=""><a href="#"><img src="images/Kale.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/Spinach.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/SwissChard.jpg" alt=""></a></li>
           </ul>
           <ul>
-            <li class=""><a href="#"><img src="images/meat1.jpg" alt=""></a></li>
-            <li><a href="#"><img src="images/meat2.jpg" alt=""></a></li>
-            <li><a href="#"><img src="images/meat3.jpg" alt=""></a></li>
+            <li class=""><a href="#"><img src="images/Beans.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/Sprouts.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/HotPepper.jpg" alt=""></a></li>
           </ul>
           <ul>
-            <li class=""><a href="#"><img src="images/dier1.jpg" alt=""></a></li>
-            <li><a href="#"><img src="images/dier2.jpg" alt=""></a></li>
-            <li><a href="#"><img src="images/dier3.jpg" alt=""></a></li>
+            <li class=""><a href="#"><img src="images/Almond.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/Oats.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/Walnuts.jpg" alt=""></a></li>
           </ul>
         
           <nav>
             <a href="#">Fruits</a>
+            <a href="#">Greens</a>
             <a href="#">Vegetables</a>
-            <a href="#">Shell Fish</a>
-            <a href="#">Fish</a>
+            <a href="#">Nuts & Seeds</a>
           </nav>
         </div>
     </div>
