--- a/Neptune's Garden/site/Contacts.html
+++ b/Neptune's Garden/site/Contacts.html
@@ -70,8 +70,8 @@
             <figure class="img_inner fleft">
                           <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d6251.428021213215!2d-78.86815639999999!3d38.4249736!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1418178247217" width="600" height="450" frameborder="0" style="border:0"></iframe>
                </figure>
-               <p>All premium <span class="col1"><a href="http://www.templatemonster.com/category.php" rel="nofollow">website templates</a></span> from our collection go with support services. We do not provide any personal support for freebies. </p>
-               <p>If you need someone to help you customize or polish the chosen free theme, ask guys from <span class="col1"><a href="http://templatetuning.com" rel="dofollow">Template Tuning</a></span> to do it for you. Keep in mind this will be a paid service.</p>
+               <p>Neptune's Garden is located on the outskirts of Harrisonburg, VA. We prvide fresh produce to the surrounding cummunity.</p>
+               <p>Feel free to stop on by, we provide tours from sunrise to sundown, also check out our store that offers over 50 organic fruit and vegetable varieties.</p>
                Any ideas about recipes or news articles you want to see at our blog? Leave your messages here and tell us about the topics or categories that the information falls under. 
               
           </div>
