--- a/Neptune's Garden/site/Recipes.html
+++ b/Neptune's Garden/site/Recipes.html
@@ -77,7 +77,7 @@
           <a href="#" class="link1">Learn More</a>
         </div></div>
       <div class="rec"><img src="images/page4_img3.jpg" alt="" class="img_inner fleft "><div class="extra_wrapper">
-          <h4 class="head2"><a href="#">Schizandra Berry Superfood Smoothie</a></h4>This flavorful and exceptionally nutritious smoothie featuring the five-flavor superfood, schizandra berry. Schizandra berry is one of my new favorite superfoods. I dabbled with the berries in the past, using them to make tea, but it wasn’t until this new extract powder recently hit the market that it became a regular in my rotation. 
+          <h4 class="head2"><a href="#">Mixed Berry & Citrus Superfood Smoothie</a></h4>This flavorful and exceptionally nutritious smoothie featuring the five-flavor superfood, schizandra berry. Schizandra berry is one of my new favorite superfoods. I dabbled with the berries in the past, using them to make tea, but it wasn’t until this new extract powder recently hit the market that it became a regular in my rotation. 
           <br>
           <a href="#" class="link1">Learn More</a>
         </div></div>
